# robo7

./: README.md  dummit.txt
brain/: CMakeLists.txt  README.md  package.xml
brain/launch/: brain.launch
brain/src/: brain.cpp
keyboard_controller/: CMakeLists.txt  package.xml
keyboard_controller/src/: keyboard_controller.cpp
kinematics/controller/: CMakeLists.txt  package.xml
kinematics/controller/src/: motor_controller.cpp  pid_controller.cpp
kinematics/gate_controller/: CMakeLists.txt  README.md  package.xml
kinematics/gate_controller/launch/: gate.launch
kinematics/gate_controller/src/: gate_controller.cpp  gate_opener.cpp
kinematics/launch/: motors.launch
kinematics/motors/: CMakeLists.txt  package.xml
kinematics/motors/launch/: motors.launch  motors2.launch
kinematics/motors/src/: motor.cpp  motor_controller.cpp  motors_node.cpp  twist.cpp
kinematics/path_follower/: CMakeLists.txt  package.xml
kinematics/path_follower/launch/: destination.launch
kinematics/path_follower/src/: breaker.cpp  destination_point.cpp  go_to.cpp  move_straight.cpp  path_follower.cpp  path_follower_v2.cpp  point_follower.cpp  pure_rotation.cpp
kinematics/twist_interpreter/: CMakeLists.txt  README  package.xml
kinematics/twist_interpreter/src/: twist_interpreter.cpp
launch/: hardware.launch  kinematics.launch  robo7.launch
localization/: rviz_visualisation.launch
localization/ICP/: CMakeLists.txt  package.xml
localization/ICP/src/: ICP.cpp
localization/dead_reckoning/: CMakeLists.txt  package.xml
localization/dead_reckoning/src/: dead_reckoning.cpp
localization/deadreckogning/: CMakeLists.txt  package.xml
localization/deadreckogning/src/: dead_reckogning.cpp  deadreckogning.cpp
localization/deadreckoning/: CMakeLists.txt  package.xml
localization/deadreckoning/maps/: lab_maze_2018.txt
localization/deadreckoning/src/: deadreckoning.cpp
localization/kalman_filter/: CMakeLists.txt  package.xml
localization/kalman_filter/src/: kalman_filter.cpp  kalman_filter_v2.cpp  meas_update.cpp
localization/localization/: CMakeLists.txt  package.xml
localization/localization/src/: ICP.cpp  localization.cpp
localization/map_maintenance/: CMakeLists.txt  package.xml
localization/map_maintenance/src/: map_maintenance.cpp
localization/mapping/: CMakeLists.txt  package.xml
localization/mapping/src/: mapping.cpp  update_discretized_map.cpp  update_map.cpp  update_occupancy_grid.cpp
localization/ransac/: CMakeLists.txt  package.xml
localization/ransac/src/: lidar_map_coordinates.cpp  ransac.cpp  ransac_test.cpp  scan_to_coordinates.cpp
localization/testService/: CMakeLists.txt  package.xml
localization/testService/src/: test_service.cpp
localization/torviz/: CMakeLists.txt  package.xml
planning/exploration/: CMakeLists.txt  package.xml
planning/heuristic_grids/: CMakeLists.txt  README.md  package.xml
planning/occupancy_grid/: CMakeLists.txt  README.md  package.xml
planning/path_planning/: CMakeLists.txt  package.xml
planning/path_testing/: CMakeLists.txt  package.xml
planning/pathplanning/: CMakeLists.txt  README.md  package.xml
ras_lab1_msgs/: CMakeLists.txt
ras_maze/ras_maze_map/: CMakeLists.txt  package.xml
robo7/: package.xml
robo7/motors/: CMakeLists.txt
robo7/robo7/: CMakeLists.txt
robo7_bag/: CMakeLists.txt  package.xml
robo7_bag/localization/: 2018-10-26-12-12-35.bag  2018-10-26-12-23-29.bag  2018-10-26-12-23-54.bag  2018-10-26-12-25-55.bag  2018-10-26-12-27-13.bag  2018-10-26-12-28-52.bag  2018-10-26-12-29-33.bag
robo7_bag/mapping/: 2018-11-20-16-50-30.bag  2018-11-20-16-53-31.bag
robo7_bag/pathplanning/: 2018-10-31-13-43-20.bag  2018-10-31-13-44-31.bag  2018-10-31-13-45-39.bag
robo7_launch/: CMakeLists.txt  package.xml
robo7_launch/launch/: hardware.launch  kinematics.launch  robo7.launch  vision.launch  vision_test.launch
robo7_launch/memory/: objs.txt  obss.txt  walls.txt
robo7_launch/src/: initialisation.cpp
robo7_msg/: package.xml
robo7_msg/msg/: Encoders.msg  r_motor
robo7_msgs/: CMakeLists.txt  package.xml
robo7_msgs/msg/: DEVdetectedObj.msg  Matrix3.msg  Matrix4.msg  MeasureFeedback.msg  MeasureRequest.msg  PWM.msg  WheelAngularVelocities.msg  XY_coordinates.msg  aObject.msg  aWall.msg  activation_states.msg  allObjects.msg  allObstacles.msg  classifiedObj.msg  cornerList.msg  dead_reck_param.msg  destination_point.msg  detectedObstacle.msg  detectedState.msg  explore.msg  former_position.msg  grid_matrix.msg  grid_row.msg  mapping_grid.msg  matrix.msg  matrix_row.msg  occupancy_matrix.msg  occupancy_row.msg  path.msg  paths.msg  robotPositionTest.msg  saved_position.msg  target_trajectory.msg  target_trajectory_point.msg  the_robot_position.msg  trajectory.msg  trajectory_point.msg  wallList.msg  wallPoint.msg
robo7_srvs/: CMakeLists.txt  package.xml
robo7_srvs/srv/: FilterOn.srv  GoTo.srv  ICPAlgorithm.srv  IsGridOccupied.srv  MoveStraight.srv  PathFollower2.srv  PathFollowerSrv.srv  PickupAt.srv  PureRotation.srv  RansacWall.srv  SaveAll.srv  UpdateDiscretizedMap.srv  UpdateOccupancyGrid.srv  UpdateOccupancyGridFiltered.srv  callServiceTest.srv  discretize_map.srv  distanceTo.srv  door_opener.srv  exploration.srv  explore.srv  exploreTheMap.srv  getFrontier.srv  moveToNextPoint.srv  objectToRobot.srv  path_planning.srv  replaceExplorationPoints.srv  scanCoord.srv  update_map.srv
speaker/: CMakeLists.txt  README.md  package.xml
speaker/src/: speaker.cpp
vision/: README.md
vision/MobileNet_SVM_train/: convert_to_TFRecords.py  params.py  (+4 more)
visualization/: CMakeLists.txt  package.xml
visualization/config/: lab_maze.rviz
visualization/launch/: rviz_plots.launch  rviz_remote.launch  rviz_visualization.launch
visualization/src/: all_objects.cpp  dest_point_plot.cpp  laserXY.cpp  lidar_plot.cpp  map_maintenance_visu.cpp  mapping_occupancy.cpp  occupancy.cpp  paths.cpp  plot_exploration_points.cpp  plot_lidar_corners.cpp  plot_map.cpp  plot_map_corners.cpp  plot_path_discretized.cpp  slam_visualization.cpp  the_map_update_plot.cpp  visualization.cpp  wall_lidar_plot.cpp
(+127 files in other folders)
