<?xml version="1.0"?>
<package format="2">
  <name>robo7</name>
  <version>0.0.0</version>
  <description>The robo7 package</description>

  <maintainer email="jacobbj@kth.se">Jacob</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
        <metapackage/>
  </export>
</package>
