<package>
 <name>robo7_msg</name>
  <version>0.1.0</version>
  <description>
    Messages for robo7 project.
  </description>
  <license>BSD</license>

  <author email= "johndah@kth.se">John Dahlberg</author>
  <maintainer email="johndah@kth.se">John Dahlberg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
