<package>
 <name>robo7_msgs</name>
  <version>0.1.0</version>
  <description>
    Messages for robo7 project.
  </description>
  <license>BSD</license>

  <author email= "johndah@kth.se">John Dahlberg</author>
  <maintainer email="johndah@kth.se">John Dahlberg</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>phidgets</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>phidgets</run_depend>

</package>
