<?xml version="1.0"?>
<package format="2">
  <name>gate_controller</name>
  <version>0.0.0</version>
  <description>The gate_controller</description>

  <maintainer email="jacobbj@kth.se">ras</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>arduino_servo_control</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>arduino_servo_control</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>arduino_servo_control</exec_depend>


  <export>


  </export>
</package>
