<?xml version="1.0"?>
<package format="2">
  <name>motors</name>
  <version>0.0.0</version>
  <description>The controller package</description>

  <maintainer email="jacobbj@kth.se">jacob</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>robo7_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>phidgets</build_depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>robo7_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>phidgets</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>robo7_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>phidgets</exec_depend>

  <export>

  </export>
</package>
